--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -40,7 +40,7 @@
     url("../image/herotabimg2x.jpg");
  }
 }
-  @media screen and (min-width: 769px) {
+  @media screen and (min-width: 1200px) {
   padding: 200px 0;
   background-image: linear-gradient(
       rgba(47, 48, 58, 0.4),
@@ -91,7 +91,21 @@
   letter-spacing: 0.06em;
   text-transform: uppercase;
   @media screen and (min-width: 767px) {
-    width: 360px;
-    height: 84px;
+  width: 360px;
+  height: 84px;
+  margin-top: 0;
+  margin-bottom: 30px;
+  margin-left: auto;
+  margin-right: auto;
+  }
+  @media screen and (min-width: 1200px) {
+  width: 696px;
+  height: 120px;
+  font-size: 44px;
+  line-height: 1.36;
+  text-align: center;
+  letter-spacing: 0.06em;
+  text-transform: uppercase;
+  margin-bottom: 30px;
   }
 }
