--- a/sass/layouts/_footer.scss
+++ b/sass/layouts/_footer.scss
@@ -10,6 +10,7 @@
 .content__social {
 @media screen and (min-width: 1200px) { 
 display: flex;
+align-items: baseline;
 }
 }
 
@@ -190,6 +191,8 @@ margin-left: auto;
 margin-right: auto;
   }
 @media screen and (min-width: 1200px) {
+font-size: 14px;
+line-height: 1.14;
 width: 116px;
 margin: 12px 0 20px 0;
 } 
@@ -271,8 +274,8 @@ align-items: center;
   text-align: center;
   }
   @media screen and (min-width: 1200px) {
-  width: 216px;
-  margin-top: 12px;
+  // width: 216px;
+  // margin-top: 12px;
   }
 }
 
