--- a/css/main.css
+++ b/css/main.css
@@ -574,7 +574,7 @@ body.modal-open {
   }
 }
 
-@media screen and (min-width: 480px) and (max-width: 767px) {
+@media screen and (min-width: 480px) {
   .main-nav {
     width: 480px;
   }
