--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -12,7 +12,7 @@
 
 .main-nav {
 
-@media screen and (min-width: 480px) and (max-width: 767px) {
+@media screen and (min-width: 480px) {
   width: 480px;
   // padding-left: 15px;
  }
