--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -21,7 +21,7 @@
   height: 80px;
   display: flex;
   padding-left: 15px;
-  margin: 0;
+  // margin: 0;
  }
  @media screen and (min-width: 1200px) {
   // width: 100%;
