--- a/sass/layouts/_footer.scss
+++ b/sass/layouts/_footer.scss
@@ -27,7 +27,9 @@ margin-bottom: 0;
   @media screen and (min-width: 768px) {
   display: flex;
   justify-content: center;
-  // margin-bottom: 60px;
+  }
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+  margin-bottom: 60px;
   }
 }
 
