--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -21,6 +21,7 @@
   height: 80px;
   display: flex;
   padding-left: 15px;
+  align-items: center;
   // margin: 0;
  }
  @media screen and (min-width: 1200px) {
@@ -203,9 +204,9 @@ padding: 0;
   display: none;
  }
 @media screen and (min-width: 768px) and (max-width: 1199px) {
-  display: block;
-  padding-top: 20px;
-  padding-bottom: 10px;
+  // display: block;
+  // padding-top: 20px;
+  // padding-bottom: 10px;
  }
  @media screen and (min-width: 1200px) {
   display: flex;
