--- a/css/main.css
+++ b/css/main.css
@@ -1137,15 +1137,17 @@ body.modal-open {
   }
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 768px) and (max-width: 1199px) {
   .footer__social__tab {
     display: flex;
     justify-content: center;
+    margin-bottom: 60px;
   }
 }
-@media screen and (min-width: 768px) and (max-width: 1199px) {
+@media screen and (min-width: 1200px) {
   .footer__social__tab {
-    margin-bottom: 60px;
+    display: flex;
+    justify-content: center;
   }
 }
 
