--- a/css/main.css
+++ b/css/main.css
@@ -1137,7 +1137,7 @@ body.modal-open {
   }
 }
 
-@media screen and (min-width: 768px) and (max-width: 1199px) {
+@media screen and (min-width: 768px) {
   .footer__social__tab {
     display: flex;
     justify-content: center;
@@ -1148,6 +1148,7 @@ body.modal-open {
   .footer__social__tab {
     display: flex;
     justify-content: center;
+    margin-bottom: 0;
   }
 }
 
